--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="css/main.css" />
     <link href="css/lightbox.css" rel="stylesheet" />
-    <title>My Work</title>
+    <title>My Blog</title>
   </head>
   <body>
     <header>
