--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
         <span class="text-secondary">Work</span>
       </h1>
       <h2 class="sm-heading">
-        Check out my completed stuff...
+        Check out my completed work...
       </h2>
       <div class="projects">
         <div class="item">
@@ -66,8 +66,8 @@
           >
             <i class="fas fa-eye"> ManagerScore</i>
           </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+          <a href="https://www.behance.net/gallery/81735331/ManagerScore" class="btn-dark">
+            <i class="fab fa-behance"> Behance</i>
           </a>
         </div>
         <div class="item">
@@ -78,11 +78,13 @@
           >
             <img src="img/projects/project2.jpg" alt="Project" />
           </a>
-          <a href="#" class="btn-light">
+          <a href="img/projects/project2.jpg"
+          data-lightbox="image-2"
+          data-title="Personal Portfolio" class="btn-light">
             <i class="fas fa-eye"> My Portfolio</i>
           </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+          <a href="about.html" class="btn-dark">
+            <i class="fas fa-mouse-pointer"> Launched</i>
           </a>
         </div>
         <div class="item">
@@ -101,8 +103,8 @@
           >
             <i class="fas fa-eye"> Football Kit</i>
           </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+          <a href="https://www.behance.net/gallery/81735427/Turkey-National-Team-Kit-Concept" class="btn-dark">
+            <i class="fab fa-behance"> Behance</i>
           </a>
         </div>
         <div class="item">
@@ -116,11 +118,13 @@
               alt="Portrait Design Concept"
             />
           </a>
-          <a href="#" class="btn-light">
+          <a href="img/projects/project4.jpg"
+          data-lightbox="image-4"
+          data-title="Portrait Design Concept" class="btn-light">
             <i class="fas fa-eye"> Portrait</i>
           </a>
           <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+            <i class="fab fa-instagram"> Instagram</i>
           </a>
         </div>
         <!-- <div class="item">
