--- a/calismalar.html
+++ b/calismalar.html
@@ -65,7 +65,7 @@
           >
             <i class="fas fa-eye"> ManagerScore</i>
           </a>
-          <a href="#" class="btn-dark">
+          <a href="https://www.behance.net/gallery/81735331/ManagerScore" class="btn-dark">
             <i class="fab fa-behance"> Behance</i>
           </a>
         </div>
@@ -77,11 +77,13 @@
           >
             <img src="img/projects/project2.jpg" alt="Project" />
           </a>
-          <a href="#" class="btn-light">
+          <a href="img/projects/project2.jpg"
+          data-lightbox="image-2"
+          data-title="Kişisel Web Site ve Logo Tasarımı" class="btn-light">
             <i class="fas fa-eye"> Web Site</i>
           </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+          <a href="hakkimda.html" class="btn-dark">
+            <i class="fas fa-mouse-pointer"> Kullanımda</i>
           </a>
         </div>
         <div class="item">
@@ -100,8 +102,8 @@
           >
             <i class="fas fa-eye"> Forma Tasarımı</i>
           </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+          <a href="https://www.behance.net/gallery/81735427/Turkey-National-Team-Kit-Concept" class="btn-dark">
+            <i class="fab fa-behance"> Behance</i>
           </a>
         </div>
         <div class="item">
@@ -115,11 +117,13 @@
               alt="Portre Tasarımı"
             />
           </a>
-          <a href="#" class="btn-light">
+          <a href="img/projects/project4.jpg"
+            data-lightbox="image-4"
+            data-title="Portre Tasarımı" class="btn-light">
             <i class="fas fa-eye"> Portre Tasarımı</i>
           </a>
           <a href="#" class="btn-dark">
-            <i class="fab fa-github">Github</i>
+            <i class="fab fa-instagram"> Instagram</i>
           </a>
         </div>
         <!-- <div class="item">
